# TuiTalk

./: .env.example  .gitignore  README.md  docker-compose.yaml  flake.nix
.github/workflows/: docker-image.yml
client/: Cargo.toml
client/src/: main.rs
db/: Dockerfile  database.sql
latex-docs/: .gitignore  README.md  flake.nix  main.tex
latex-docs/config/: cover.tex  header.tex
latex-docs/content/: acronyms.tex  documentInfo.tex
latex-docs/content/chapter/: 01.tex
loadbalancer/: Dockerfile  nginx.conf
redis-cluster/: Dockerfile  docker-compose.yml  redis-cluster.tmpl.conf
rust/: Cargo.toml  Dockerfile
rust/client/: Cargo.toml
rust/client/src/: app.rs  command.rs  main.rs  ui.rs
rust/shared/: Cargo.toml  index.html
rust/shared/src/: lib.rs
rust/wasm-client/: Cargo.toml  index.html  styles.css
rust/wasm-client/src/: lib.rs  main.rs  wasm_client.rs
rust/ws-server/: .env.example  Cargo.toml
rust/ws-server/src/: main.rs  wsserver.rs
rust/ws-server/src/database/: connection.rs  mod.rs  models.rs  queries.rs  schema.rs
rust/ws-server/src/redis/: mod.rs
test_backend/: index.html
test_backend_1/: index.html
wasm-client/: Cargo.toml  build.sh
wasm-client/target-wasm/: index.html
