[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared"}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
futures-channel = "0.3"
serde = "1.0.219"
bincode = "1.3"
color-eyre = "0.6.5"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.29.0"
chrono = "0.4"
anyhow = "1.0.99"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4", "serde"
]
