[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# Common dependencies for both targets
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
js-sys = "0.3.77"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3.64", features = [
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent",
    "BinaryType",  # Explicitly added
    "console"
] }

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"

# Dev/test dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3.40"
