[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# Common dependencies for both targets
[dependencies]
gloo-net = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
console_log = "0.2"  # optional for browser console logging
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
futures-util = "0.3.30"
futures-channel = "0.3.30"
thiserror = "2.0.12"

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"

# Dev/test dependencies
[dev-dependencies]
wasm-bindgen-test = "0.3.40"
