[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# Common dependencies for both targets
[dependencies]
gloo-net = { version = "0.2", features = ["websocket"] }  # WebSocket implementation
gloo-utils = "0.1.7"
wasm-bindgen = "0.2"  # Required for WASM interop
futures-util = "0.3"  # For working with async streams
futures-channel = "0.3"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
yew = { version = "0.20", features = ["csr"] }
log = "0.4"
console_log = "0.2"
redis = { version = "0.32.5", features = ["cluster"] }

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4", "serde"
]

# Native-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "net"] }
tokio-tungstenite = "0.20.0"
futures-util = "0.3.30"
futures-channel = "0.3.30"

