[package]
name = "wasm-client"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = { version = "0.4", features = ["websocket"] }  # WebSocket implementation
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
shared = {path = "../shared"}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = "0.4"
console_log = "0.2"
thiserror = "1.0"
futures-channel = "0.3"
futures-util = "0.3"
web-sys = {version = "0.3.77", features = [
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "Window",
    "console",
]}
console_error_panic_hook = "0.1.7"
chrono = "0.4.41"
instant = "0.1"
gloo-timers = "0.3.0"
wasm-logger = "0.2.0"
