[package]
name = "ws-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared"}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
futures-channel = "0.3"
# serde = "1.0.219"
bincode = "1.3"
chrono = { version = "0.4.20-rc.1" }
redis = { version = "0.32.5", features = ["cluster"] }
