[package]
name = "ws-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = {path = "../shared"}
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.27.0"
futures-util = "0.3"
bincode = "1.3"
redis = { version = "0.32.5", features = ["cluster", "cluster-async", "tokio-comp"] }
dotenvy = "0.15.7"
diesel = { version = "2.2.12", features = ["postgres", "uuid"] }
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 
anyhow = "1.0.99"

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4", "serde"
]
